<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/more_leaves_on_green"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/credentialsLayout"
        android:contentDescription="@string/image_desc" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/nextEventNotifierLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:minHeight="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/credentialsLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_event_header"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/nextEventNotifierTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/registrationInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/credentialsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nextEventNotifierLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/room_credentials_heading"/>

        <TextView
            android:id="@+id/roomIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/roomPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:text="@string/register_button_text"
        app:layout_constraintTop_toBottomOf="@+id/credentialsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registrationLayout"
        android:onClick="registerForEvent"
        android:visibility="gone"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/registrationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/previousWinnerLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_teammates_names"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teammate_1"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/playerOneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/teammate_1_hint"
                android:autofillHints="Enter Name"
                android:inputType="textPersonName" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teammate_2"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/playerTwoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/teammate_2_hint"
                android:autofillHints="Enter Name"
                android:inputType="textPersonName" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teammate_3"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/playerThreeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/teammate_3_hint"
                android:autofillHints="Enter Name"
                android:inputType="textPersonName" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teammate_4"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/playerFourEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/teammate_4_hint"
                android:autofillHints="Enter Name"
                android:inputType="textPersonName" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/team_submit_button_text"
            android:textAllCaps="false"
            android:onClick="addTeamToLineup"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/cork_board"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/registrationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/previousWinnerTextView"
        android:contentDescription="@string/image_desc" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/previousWinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:minHeight="100dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/registrationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/previousWinnerTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/previous_winner_header"
            android:textSize="30sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/previousWinnerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/previousWinnerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/newsLayout"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/bush"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/previousWinnerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newsTextView"
        android:contentDescription="@string/image_desc" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/newsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/previousWinnerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/newsTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_header"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/newsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/newsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>